# zfish

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  build.zig  build.zig.zon  pyproject.toml
docs/: 0-README.md  00-README.md  00-architecture.md  01-architecture.md  01-engine-board.md  02-engine-board.md  02-engine-search.md  03-engine-eval.md  03-engine-search.md  04-engine-eval.md  04-multithreading.md  05-multithreading.md  05-tablebases.md  06-platform.md  06-tablebases.md  07-platform.md  07-shell.md  08-idiomatic-zig.md  08-shell.md  09-idiomatic-zig.md  09-tooling-ci.md  1-architecture.md  10-references.md  10-tooling-ci.md  11-references.md  11-writing.md  2-engine-board.md  3-engine-search.md  4-engine-eval.md  5-multithreading.md  5-platform.md  6-shell.md  6-tablebases.md  7-idiomatic-zig.md  7-platform.md  8-shell.md  8-tooling-ci.md  9-idiomatic-zig.md  9-references.md  README.md
reports/: REPORT-1-CODEBASE.md  REPORT-1-DISASTER.md
src/: ZFISH-ORACLE-FROZEN.md  benchmark.h  bitboard.cpp  bitboard.h  engine.h  engine_construct.zig  evaluate.cpp  evaluate.h  graph_layout.zig  libc.zig  main.zig  memory.zig  misc.h  movepick.cpp  movepick.h  native_engine.zig  position.cpp  position.h  score.h  score.zig  search.cpp  search.h  thread.cpp  thread.h  thread_construct.zig  timeman.cpp  timeman.h  tune.h  uci.h  ucioption.h  worker_construct.zig  worker_layout.zig  worker_native_construct.zig
tests/: signature.sh
tools/: arch_determinism.sh  arch_report.zig  bench_matrix.golden  (+54 more)
(+523 files in other folders)
